--- a/test3/Views/Shared/_LoginPartial.cshtml
+++ b/test3/Views/Shared/_LoginPartial.cshtml
@@ -17,6 +17,10 @@
 }
 else
 {
+    <form class="form-inline my-2 my-lg-0 " asp-controller="Movie" asp-action="Filter" style="display: inline-block,padding-left: 12px;">
+        <input name="searchString" type="text" class="form-control" placeholder="Search for a movie..." aria-label="Recipient's username" aria-describedby="button-addon2" >
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="bi bi-search"></i></button>
+    </form>
     <li class="nav-item">
         <a class="nav-link text-dark" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
     </li>
