CRUD for Cinema&Producer ver 0.0.7

--- a/test3/Views/Cinema/Index.cshtml
+++ b/test3/Views/Cinema/Index.cshtml
@@ -48,4 +48,8 @@
         </table>
 
     </div>
+    <div style="position: fixed; left: 50px; right:25px botton:50px;">
+        <button  class="btn btn-info" type="submit" onclick="location.href='@Url.Action("Create", "Cinema")'">
+            <i class="bi bi-patch-plus"></i>Add new Cinema</button>
+    </div
 </div>
