--- a/test3/Views/Movie/Edit.cshtml
+++ b/test3/Views/Movie/Edit.cshtml
@@ -1,20 +1,18 @@
-@model NewMovieVM
-
-@using test3.Models;
-
+﻿@model NewMovieVM
+ 
 @{
-    ViewData["Title"] = "Create a new movie";
+    ViewData["Title"] = "Update movie";
 }
 
 <div class="row">
     <div class="col-md-8 offset-2">
         <p>
-            <h4>Create a new movie</h4>
+            <h4>Update movie</h4>
         </p>
 
         <div class="row">
             <div class="col-md-8 offset-2">
-                <form asp-action="Create" asp-controller="Movie" method="post">
+                <form asp-action="Edit">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
                     <div class="row">
@@ -51,15 +49,6 @@
                                 <select asp-for="CinemaId" class="form-control" asp-items="ViewBag.CinemaViewBag"></select>
                                 <span asp-validation-for="CinemaId" class="text-danger"></span>
                             </div>
-                            @* <select asp-for="CinemaId" class="form-select" aria-label="Default select example">
-                                <option selected>Open this select menu</option>
-                                @foreach (var item in @Model.c)
-                                {
-                                    <option value=@item.CinemaId></option>
-                                
-                                } *@
-                                
-                            </select>
                             <div class="form-group">
                                 <label asp-for="MovieCategory" class="control-label"></label>
                                 <select asp-for="MovieCategory" class="form-control" asp-items="Html.GetEnumSelectList<MovieCategory>()"></select>
@@ -90,7 +79,7 @@
                     </div>
 
                     <div class="form-group">
-                        <input type="submit" value="Create" class="btn btn-outline-success float-right" />
+                        <input type="submit" value="Edit" class="btn btn-outline-success float-right" />
                         <a class="btn btn-outline-secondary" asp-action="Index">Show all</a>
                     </div>
 
@@ -104,6 +93,11 @@
 
 @section Scripts{ 
     <script>
+        $(document).ready(function () {
+            var output = document.getElementById("ImageUrlPreview");
+            output.src = $("#ImageURL").val();
+        });
+
         $("#ImageURL").on("change", function () {
             var output = document.getElementById("ImageUrlPreview");
             output.src = $(this).val();
