--- a/test3/Views/Movie/Index.cshtml
+++ b/test3/Views/Movie/Index.cshtml
@@ -56,10 +56,7 @@
                                 <a class="btn btn-outline-primary float-right" asp-action="Details" asp-route-id="@item.Id">
                                     <i class="bi bi-eye-fill"></i> Show Details
                                 </a>
-                                <a class="btn btn-success text-white 
-                                   asp-controller="Orders" 
-                                   asp-action="AddItemToShoppingCart" 
-                                   asp-route-id="@item.Id">
+                                <a class="btn btn-success text-white" onclick="location.href='@Url.Action("AddItemToShoppingCart", "Order" ,  new {id=item.Id })'" >
                                 <i class="bi bi-cart-plus"></i> Add to Cart (Price @item.Price.ToString("c"))</a>
                             </p>
                         </div>
