--- a/test3/Views/Shared/_Layout.cshtml
+++ b/test3/Views/Shared/_Layout.cshtml
@@ -37,6 +37,9 @@
                         </li>
                     </ul>
                 </div>
+                <ul class="navbar-nav">
+                        @await Component.InvokeAsync("ShoppingCartSummary")
+                </ul>
                 <partial name ="_LoginPartial"></partial>
             </div>
         </nav>
