--- a/test3/Views/Cinema/Index.cshtml
+++ b/test3/Views/Cinema/Index.cshtml
@@ -48,8 +48,8 @@
         </table>
 
     </div>
-    <div style="position: fixed; left: 50px; right:25px botton:50px;">
-        <button  class="btn btn-info" type="submit" onclick="location.href='@Url.Action("Create", "Cinema")'">
-            <i class="bi bi-patch-plus"></i>Add new Cinema</button>
+    <div style="position: fixed; left: 90%;  botton:50px; top:90%;">
+        <button  class="btn  btn-infoCreate" type="submit" onclick="location.href='@Url.Action("Create", "Cinema")'">
+            <i class="bi bi-patch-plus"></i>Add new</button>
     </div
 </div>
