--- a/test3/Views/Shared/_LoginPartial.cshtml
+++ b/test3/Views/Shared/_LoginPartial.cshtml
@@ -21,28 +21,18 @@ else
         <input name="searchString" type="text" class="form-control" placeholder="Search for a movie..." aria-label="Recipient's username" aria-describedby="button-addon2" >
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit"><i class="bi bi-search"></i></button>
     </form>
-    <div class="dropdown">
-        <button class="btn btn-outline-success dropdown-toggle" type="button" id="profile-btn" data-toggle="dropdown"
-                aria-expanded="false">
-            <i class="bi bi-person-badge"></i> Hello @UserManager.GetUserName(User)
-        </button>
-        <ul class="dropdown-menu" aria-labelledby="profile-btn">
-            <li>
-                <a class="dropdown-item" asp-controller="Order" asp-action="Index">
-                    <i class="bi bi-list"></i> Orders
-                </a>
-            </li>
 
-            @* @if (User.IsInRole("Admin"))
-            {
-                <li>
-                    <a class="dropdown-item" asp-controller="Account" asp-action="Users">
-                        <i class="bi bi-people"></i> Users
-                    </a>
-                </li>
-            } *@
-        </ul>
-    </div>
+    <div class="btn-group">
+        <button class="btn  btn-infoCreate dropdown-toggle dropdown-toggle-split" type="button"
+        href="#" id="navbarDropdownMenuLink"  data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+             @*  <i class="bi bi-person-badge"></i> Hello @UserManager.GetUserName(User)  *@
+         Click
+        </button>
+        <div class="dropdown-menu" >
+        <a class="dropdown-item" asp-controller="Order" asp-action="Index"> Orders</a>
+        </div>
+    </div>  
+
     <li class="nav-item">
         <a class="nav-link text-dark" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
     </li>
